# india-runs-ranking

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  EVALUATION.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  submission_metadata.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  build.yml  lint.yml  tests.yml
configs/: behavior.yaml  build.yaml  jd_synonyms.yaml  llm.yaml  ranking.yaml  reasoning_prompts.yaml  sandbox.yaml  school_prestige.yaml
data/raw/: README_bundle.md
docs/: final_presentation.pptx  final_report.md  future_work.md  iteration-2.md  methodology.md  reproducibility.md  research_findings.md  system_report.md
evaluation/: README.md  feature_importance.py  grade_thresholds.py  ranking_metrics.py  reasoning_audit.py  run_evaluation.py  scoring.py  system_quality.py
evaluation/results/: EVAL.json  FINAL_GRADE.md  feature_importance.md  ranking_metrics.csv  reasoning_quality.md  submission.csv
outputs/test/: proxy.json  summary.csv
reports/: bench.md  bench_v2.md  bench_v3.md  benchmark.md  data_profile.md  evaluation_report.md  reasoning_quality.md
scripts/: audit_reasoning_quality.py  bench_quick.py  build_artifacts.py  build_artifacts.sh  build_bm25.py  convert_pptx_to_pdf.py  data_profile.py  dev_build_ltrs.py  fetch_local_llm.py  finetune_ce_bge.py  generate_reasoning.py  make_presentation.py  precompute_ground_truth.py  run_ablation.py  run_ranking.sh  sample_pool.py  search_ensemble_weights.py  train_listwise_reranker.py  train_ltr.py  train_ltr_multitask.py  validate.sh
src/api/: __init__.py  schemas.py
src/behavioral/: __init__.py  availability.py  honeypot.py  jd_filters.py
src/evaluation/: __init__.py  ablation_runner.py  eval_rubric.py  jd_literal_rubric.py  ndcg.py  proxy_ground_truth.py
src/feature_store/: __init__.py  parquet_store.py
src/ingestion/: __init__.py  parse_jsonl.py  schema_validator.py
src/preprocessing/: __init__.py  career_jd_sim.py  deep_profile.py  feature_engineer.py  normalize.py
src/ranking/: __init__.py  binary_tier3.py  catboost_ranker.py  cross_encoder.py  ensemble.py  listwise_reranker.py  ltr_calibrator.py  ltr_model.py  ltr_multitask.py  mmr.py  top10_diversifier.py
src/retrieval/: __init__.py  bm25.py  dense_index.py  hybrid_fusion.py  query_rewriter.py
src/serving/: __init__.py  rank.py  reasoner.py  sandbox_app.py
src/training/: __init__.py  hard_negatives.py  train_ltr.py
tests/fixtures/: candidates.py
tests/integration/: test_pipeline_smoke.py  test_validate_submission.py
tests/unit/: test_ablation.py  test_audit_reasoning.py  test_availability.py  test_cross_encoder.py  test_deep_profile.py  test_ensemble.py  test_ensemble_weights.py  test_eval_rubric.py  test_eval_rubric_keywords.py  test_evaluation_scoring.py  test_features.py  test_hard_negatives_v2.py  test_honeypot.py  test_hybrid_fusion.py  test_jd_filters.py  test_jd_literal_rubric.py  test_listwise_reranker.py  test_ltr_calibrator.py  test_ltr_multitask.py  test_monotone_constraints.py  test_ndcg.py  test_normalize.py  test_output_quality.py  test_parse_jsonl.py  test_proxy_ground_truth_v2.py  test_top10_diversifier.py
