[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "india-runs-ranking"
version = "0.1.0"
description = "Candidate Intelligence Platform for the India Runs Data & AI Challenge (Redrob Hackathon v4)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "arsat", email = "arsat@example.com" }]
keywords = [
    "ranking", "retrieval", "recsys", "candidate-ranking", "talent-intelligence",
    "hackathon", "redrob", "india-runs", "data-ai-challenge",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Retrieval",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core data
    "numpy>=1.26,<3.0",
    "pandas>=2.2,<3.0",
    "pyarrow>=15.0",
    "pyyaml>=6.0",
    "jsonschema>=4.21",
    "python-dateutil>=2.8",

    # ML
    "scikit-learn>=1.4",
    "lightgbm>=4.3",
    "rank-bm25>=0.2.2",

    # Embeddings / retrieval
    "sentence-transformers>=2.6",
    "faiss-cpu>=1.8.0",
    "torch>=2.1",
    "transformers>=4.40",

    # LLM
    "openai>=1.30",  # OpenAI-compatible client; works for Zenmux

    # Serving
    "streamlit>=1.35",
    "pydantic>=2.6",

    # Observability
    "mlflow>=2.12",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "black>=24.4",
    "mypy>=1.10",
    "types-PyYAML",
    "types-python-dateutil",
    "pre-commit>=3.7",
    "ipython>=8.20",
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "python-pptx>=0.6.23",
]

[project.scripts]
build-artifacts = "scripts.build_artifacts:main"
run-ablation = "scripts.run_ablation:main"
data-profile = "scripts.data_profile:main"
train-ltr = "scripts.train_ltr:main"
generate-reasoning = "scripts.generate_reasoning:main"
make-presentation = "scripts.make_presentation:main"

[project.urls]
Homepage = "https://github.com/arsat/india-runs-ranking"
Repository = "https://github.com/arsat/india-runs-ranking"
Issues = "https://github.com/arsat/india-runs-ranking/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

[tool.setuptools.package-data]
"src" = ["py.typed"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 110
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "RUF", "PT", "PIE", "TID", "PL", "ERA", "TRY", "PERF"]
ignore = [
    "PLR0913",  # too many arguments
    "PLR2004",  # magic value used in comparison
    "TRY003",   # long messages outside exception class
    "TRY300",   # consider moving statement to else block
    "PT004",    # pytest fixture does not return anything (we use yield style)
    "PIE790",   # unnecessary pass (we use it for explicit no-op)
    "B008",     # do not perform function call in default argument (we use Pydantic Field)
    "SIM108",   # use ternary operator (we often prefer explicit if for clarity)
    "RUF012",   # mutable class attributes (Pydantic model_config pattern)
    "ERA001",   # commented-out code
    "N806",     # variable in capital (we use UPPER for constants)
]
fixable = ["ALL"]
unfixable = ["ERA001", "B006"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR0915", "PLR0912", "PLR0913", "PLR2004", "S101", "N802", "N803"]
"scripts/**/*.py" = ["PLR0913", "PLR2004", "S101", "T201"]
"src/api/schemas.py" = ["RUF012"]
"docs/**" = ["ALL"]

[tool.black]
target-version = ["py311"]
line-length = 110
extend-exclude = """
/(
    .git
  | .venv
  | build
  | dist
  | artifacts
  | outputs
)/
"""

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "artifacts/",
    "outputs/",
    "build/",
    "dist/",
    ".venv/",
    "venv/",
    "tests/fixtures/",
]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=85",
]
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "integration: marks integration tests",
    "pipeline: marks pipeline-level tests",
    "evaluation: marks tests that compute ranking metrics",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::FutureWarning",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "src/serving/sandbox_app.py",
    "src/api/schemas.py",
    "src/__init__.py",
    "src/*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
